tests/Error/ErrorCollector/ErrorCollectorSource/NotPsr2Class.php.inc
<?php

namespace Symplify\EasyCodingStandard\Tests\Error\ErrorCollector\ErrorCollectorSource;

abstract class SomeClassTest
{
    public function test()
    {
        $list =    [   1   ]  ;

        $this->assertEquals('', '');
        // $this->assertEquals('', '');
        // $this->assertEquals('', '');
        // $this->assertEquals('', '');
        // $this->assertEquals('', '');
    }

    const VALUE = '1000';
}
